public/src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "../node_modules/angular-calendar/css/angular-calendar.css";
/* Move font to global css file */
* {
    font-family: 'Montserrat', sans-serif;
}
:focus {
    outline: 0;
}
h1, h2, h3, h4, h5 {
    color: #395371;
    font-weight: 200;
 }
h6 {
    color: #395371;
    letter-spacing: 0.03em;
    font-weight: 800;
 }
p{
    font-size: 1.1em;
}
@media only screen and (max-width: 991px) {
    .container-fluid {
        position: fixed;
    }
} 

